Removing app data file & add saveToCameraRoll to trim call

--- a/ios/GoProGoals/Info.plist
+++ b/ios/GoProGoals/Info.plist
@@ -53,5 +53,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+    <string>Give $(PRODUCT_NAME) permission to save videos</string>
 </dict>
 </plist>
