--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.15",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-fs": "^2.16.2",
     "react-native-video-processing": "santiagovazquez/react-native-video-processing"
   },
   "devDependencies": {
